# gampad

./: README.md
usb_host_lib/: sdkconfig  sdkconfig.old
usb_host_lib/components/ble/: CMakeLists.txt  ble_main.c  ble_main.h  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.h  hid_device_le_prf.c  hidd_le_prf_int.h
usb_host_lib/components/esp_now/: CMakeLists.txt  Kconfig.projbuild  espnow_example.h  espnow_example_main.c
usb_host_lib/components/i2c/: CMakeLists.txt  i2c.c  i2c.h
usb_host_lib/components/xbox/: CMakeLists.txt  xbox.c  xbox.h
usb_host_lib/main/: class_driver.c  usb_host_lib_main.c
